Добавил базовую разметку
Реализовал группу предметов и геймплея.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,43 @@
     <title>Baldurs Gate 3 Mod Collection</title>
 </head>
 <body>
-    
+<h1>Коллекция модов Baldurs Gate 3</h1>
 
+<h3>В данном месте собраны различные модификации, которые помогут получить новый опыт от уже привычной игры.
+    Для удобства они разделены по категориям, источником для каждого мода является его страница на nexusmods.</h3>
 
+<h2>Геймплей:</h2>
+<ul>
+    <li class="dropdown">
+        <button class="dropdown-toggle">5e Spells</button>
+        <div class="dropdown-content">
+            <p>Данный мод добавляет в игру ряд нереализованных заклинаний с 1 по 6 круг.</p>
+
+            <div class="media-content">
+                <img src="https://staticdelivery.nexusmods.com/mods/3474/images/125/125-1657892239-60646287.png" width="415" height="250"><br>
+            </div>
+
+            <a href="https://www.nexusmods.com/baldursgate3/mods/125" target="_blank">Страница мода</a><br>
+            <a href="https://www.nexusmods.com/baldursgate3/mods/125" target="_blank">Русская локализация</a>
+        </div>
+    </li>
+</ul>
+
+<h2>Предметы:</h2>
+<ul>
+    <li class="dropdown">
+        <button class="dropdown-toggle">Eldertide Armaments</button>
+        <div class="dropdown-content">
+            <p>Добавлены 22 новых кольца и амулета с новыми уникальными заклинаниями, способностями и новыми визуальными эффектами.</p>
+
+            <div class="media-content">
+                <img src="https://staticdelivery.nexusmods.com/mods/3474/images/3596/3596-1700924625-1116108843.png" width="415" height="250"><br>
+            </div>
+
+            <a href="https://www.nexusmods.com/baldursgate3/mods/3596" target="_blank">Страница мода</a><br>
+            <a href="https://www.nexusmods.com/baldursgate3/mods/8092" target="_blank">Русская локализация</a>
+        </div>
+    </li>
+</ul>
 </body>
 </html>
