Закончил верстку основных элементов
Добавил разделы "Визуал" и "Читы".

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <li class="dropdown">
         <button class="dropdown-toggle">Eldertide Armaments</button>
         <div class="dropdown-content">
-            <p>Добавлены 22 новых кольца и амулета с новыми уникальными заклинаниями, способностями и новыми визуальными эффектами.</p>
+            <p>Добавлены 22 новых кольца и амулета с новыми уникальными заклинаниями,<br>
+                способностями и новыми визуальными эффектами.</p>
 
             <div class="media-content">
                 <img src="https://staticdelivery.nexusmods.com/mods/3474/images/3596/3596-1700924625-1116108843.png" width="415" height="250"><br>
@@ -43,6 +44,42 @@
 
             <a href="https://www.nexusmods.com/baldursgate3/mods/3596" target="_blank">Страница мода</a><br>
             <a href="https://www.nexusmods.com/baldursgate3/mods/8092" target="_blank">Русская локализация</a>
+        </div>
+    </li>
+</ul>
+
+<h2>Визуал:</h2>
+<ul>
+    <li class="dropdown">
+        <button class="dropdown-toggle">Tav's Hair Salon</button>
+        <div class="dropdown-content">
+            <p>Коллекция причесок. В основном для эльфов/полуэльфов/дроу/людей/тифлингов с телосложением 1 и 2.<br>
+                Ванильные волосы не заменяются, поэтому они предназначены только для игровых персонажей.<br>
+                Вы не встретите ни одного NPC с такой же прической.</p>
+
+            <div class="media-content">
+                <img src="https://staticdelivery.nexusmods.com/mods/3474/images/213/213-1650381429-290216436.png" width="415" height="250"><br>
+            </div>
+
+            <a href="https://www.nexusmods.com/baldursgate3/mods/213" target="_blank">Страница мода</a><br>
+            <a href="https://www.nexusmods.com/baldursgate3/mods/11192" target="_blank">Русская локализация</a>
+        </div>
+    </li>
+</ul>
+
+<h2>Читы:</h2>
+<ul>
+    <li class="dropdown">
+        <button class="dropdown-toggle">Appearance Edit Enhanced</button>
+        <div class="dropdown-content">
+            <p>Позволяет изменять тип телосложения и расу любого персонажа (в том числе компаньона) в зеркале.</p>
+
+            <div class="media-content">
+                <img src="https://staticdelivery.nexusmods.com/mods/3474/images/899/899-1695618937-408189776.png" width="415" height="250"><br>
+            </div>
+
+            <a href="https://www.nexusmods.com/baldursgate3/mods/899" target="_blank">Страница мода</a><br>
+            <a href="https://www.nexusmods.com/baldursgate3/mods/3909" target="_blank">Русская локализация</a>
         </div>
     </li>
 </ul>
