Закончил прототип сайта
Переделал верстку, добавил CSS, разместил элементы, загрузил фон

--- a/index.html
+++ b/index.html
@@ -5,83 +5,46 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Baldurs Gate 3 Mod Collection</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Baldur's Gate 3 Mod Collection</title>
 </head>
 <body>
-<h1>Коллекция модов Baldurs Gate 3</h1>
-
-<h3>В данном месте собраны различные модификации, которые помогут получить новый опыт от уже привычной игры.
-    Для удобства они разделены по категориям, источником для каждого мода является его страница на nexusmods.</h3>
-
-<h2>Геймплей:</h2>
-<ul>
-    <li class="dropdown">
-        <button class="dropdown-toggle">5e Spells</button>
-        <div class="dropdown-content">
-            <p>Данный мод добавляет в игру ряд нереализованных заклинаний с 1 по 6 круг.</p>
-
-            <div class="media-content">
-                <img src="https://staticdelivery.nexusmods.com/mods/3474/images/125/125-1657892239-60646287.png" width="415" height="250"><br>
-            </div>
-
-            <a href="https://www.nexusmods.com/baldursgate3/mods/125" target="_blank">Страница мода</a><br>
-            <a href="https://www.nexusmods.com/baldursgate3/mods/125" target="_blank">Русская локализация</a>
+<div class="background">
+    <div class="content">
+        <div class="heading">
+            <h1>Коллекция модов<br>Baldur's Gate 3</h1>
         </div>
-    </li>
-</ul>
-
-<h2>Предметы:</h2>
-<ul>
-    <li class="dropdown">
-        <button class="dropdown-toggle">Eldertide Armaments</button>
-        <div class="dropdown-content">
-            <p>Добавлены 22 новых кольца и амулета с новыми уникальными заклинаниями,<br>
-                способностями и новыми визуальными эффектами.</p>
-
-            <div class="media-content">
-                <img src="https://staticdelivery.nexusmods.com/mods/3474/images/3596/3596-1700924625-1116108843.png" width="415" height="250"><br>
-            </div>
-
-            <a href="https://www.nexusmods.com/baldursgate3/mods/3596" target="_blank">Страница мода</a><br>
-            <a href="https://www.nexusmods.com/baldursgate3/mods/8092" target="_blank">Русская локализация</a>
+        <div class="info-block">
+            <h3>В данном месте собраны различные модификации, которые помогут получить
+                новый опыт от уже привычной игры.
+                <br>
+                Для удобства они разделены по категориям,
+                источником для каждого мода является его страница на nexusmods.</h3>
         </div>
-    </li>
-</ul>
-
-<h2>Визуал:</h2>
-<ul>
-    <li class="dropdown">
-        <button class="dropdown-toggle">Tav's Hair Salon</button>
-        <div class="dropdown-content">
-            <p>Коллекция причесок. В основном для эльфов/полуэльфов/дроу/людей/тифлингов с телосложением 1 и 2.<br>
-                Ванильные волосы не заменяются, поэтому они предназначены только для игровых персонажей.<br>
-                Вы не встретите ни одного NPC с такой же прической.</p>
-
-            <div class="media-content">
-                <img src="https://staticdelivery.nexusmods.com/mods/3474/images/213/213-1650381429-290216436.png" width="415" height="250"><br>
+        <div class="container-category">
+            <div class="left-column">
+                <div class="block-gameplay">
+                    <h2 class="category-name">Геймплей</h2>
+                    <button class="dropdown-toggle">5e Spells</button>
+                </div>
+                <div class="block-items">
+                    <h2 class="category-name">Предметы</h2>
+                    <button class="dropdown-toggle">Eldertide Armaments</button>
+                </div>
             </div>
-
-            <a href="https://www.nexusmods.com/baldursgate3/mods/213" target="_blank">Страница мода</a><br>
-            <a href="https://www.nexusmods.com/baldursgate3/mods/11192" target="_blank">Русская локализация</a>
-        </div>
-    </li>
-</ul>
-
-<h2>Читы:</h2>
-<ul>
-    <li class="dropdown">
-        <button class="dropdown-toggle">Appearance Edit Enhanced</button>
-        <div class="dropdown-content">
-            <p>Позволяет изменять тип телосложения и расу любого персонажа (в том числе компаньона) в зеркале.</p>
-
-            <div class="media-content">
-                <img src="https://staticdelivery.nexusmods.com/mods/3474/images/899/899-1695618937-408189776.png" width="415" height="250"><br>
+            <div class="right-column">
+                <div class="block-visual">
+                    <h2 class="category-name">Визуал</h2>
+                    <button class="dropdown-toggle">Tav's Hair Salon</button>
+                </div>
+                <div class="block-cheats">
+                    <h2 class="category-name">Читы</h2>
+                    <button class="dropdown-toggle">Appearance Edit Enhanced</button>
+                </div>
             </div>
-
-            <a href="https://www.nexusmods.com/baldursgate3/mods/899" target="_blank">Страница мода</a><br>
-            <a href="https://www.nexusmods.com/baldursgate3/mods/3909" target="_blank">Русская локализация</a>
         </div>
-    </li>
-</ul>
+    </div>
+</div>
+<script src="index.js"></script>
 </body>
 </html>
