Добавил прокрутку окна с контентом, починил сдвиг элементов, заменил фон

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <link href="scrollbar.css" rel="stylesheet">
     <title>Baldur's Gate 3 Mod Collection</title>
 </head>
 <body>
@@ -25,21 +26,60 @@
             <div class="left-column">
                 <div class="block-gameplay">
                     <h2 class="category-name">Геймплей</h2>
-                    <button class="dropdown-toggle">5e Spells</button>
+                    <div class="mod-info">
+                        <button class="dropdown-toggle">5e Spells</button>
+                        <div class="dropdown-content">
+                            <p>Данный мод привнесет в игру нереализованные заклинания выфв ыфвфывфывывdasdasd fsd fsdf
+                                sdfsdf sdf sfdsfdsfds fsd</p>
+                        </div>
+                    </div>
+                    <div class="mod-info">
+                        <button class="dropdown-toggle">5e Spells</button>
+                        <div class="dropdown-content">
+                            <p>Данный мод привнесет в игру нереализованные заклинания выфв ыфвфывфывывdasdasd fsd fsdf
+                                sdfsdf sdf sfdsfdsfds fsd</p>
+                        </div>
+                        <div class="dropdown-content">
+                            <p>Данный мод привнесет в игру нереализованные заклинания выфв ыфвфывфывывdasdasd fsd fsdf
+                                sdfsdf sdf sfdsfdsfds fsd</p>
+                        </div>
+                        <div class="dropdown-content">
+                            <p>Данный мод привнесет в игру нереализованные заклинания выфв ыфвфывфывывdasdasd fsd fsdf
+                                sdfsdf sdf sfdsfdsfds fsd</p>
+                        </div>
+                        <div class="dropdown-content">
+                            <p>Данный мод привнесет в игру нереализованные заклинания выфв ыфвфывфывывdasdasd fsd fsdf
+                                sdfsdf sdf sfdsfdsfds fsd</p>
+                        </div>
+                        <div class="dropdown-content">
+                            <p>Данный мод привнесет в игру нереализованные заклинания выфв ыфвфывфывывdasdasd fsd fsdf
+                                sdfsdf sdf sfdsfdsfds fsd</p>
+                        </div>
+                        <div class="dropdown-content">
+                            <p>Данный мод привнесет в игру нереализованные заклинания выфв ыфвфывфывывdasdasd fsd fsdf
+                                sdfsdf sdf sfdsfdsfds fsd</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="block-items">
                     <h2 class="category-name">Предметы</h2>
-                    <button class="dropdown-toggle">Eldertide Armaments</button>
+                    <div class="mod-info">
+                        <button class="dropdown-toggle">Eldertide Armaments</button>
+                    </div>
                 </div>
             </div>
             <div class="right-column">
                 <div class="block-visual">
                     <h2 class="category-name">Визуал</h2>
-                    <button class="dropdown-toggle">Tav's Hair Salon</button>
+                    <div class="mod-info">
+                        <button class="dropdown-toggle">Tav's Hair Salon</button>
+                    </div>
                 </div>
                 <div class="block-cheats">
                     <h2 class="category-name">Читы</h2>
-                    <button class="dropdown-toggle">Appearance Edit Enhanced</button>
+                    <div class="mod-info">
+                        <button class="dropdown-toggle">Appearance Edit Enhanced</button>
+                    </div>
                 </div>
             </div>
         </div>
